--- a/doc/source/whatsnew/v2.2.0.rst
+++ b/doc/source/whatsnew/v2.2.0.rst
@@ -100,7 +100,7 @@ Deprecations
 
 Performance improvements
 ~~~~~~~~~~~~~~~~~~~~~~~~
-- Performance improvement :class:`DataFrameGroupBy` and :class:`SeriesGroupby` when grouping on index levels of a :class:`MultiIndex` (:issue:`54529`)
+- Performance improvement in :class:`DataFrameGroupBy` and :class:`SeriesGroupby` when grouping on index levels of a :class:`MultiIndex` (:issue:`54529`)
 -
 
 .. ---------------------------------------------------------------------------
